Debian packaging update

--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.0.2) UNRELEASED; urgency=low
+
+  * Added upgrade script.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 04 Sep 2012 19:31:32 +0100
+
 nagrestconf (1.0.1) UNRELEASED; urgency=low
 
   * Added more nagios directives to the REST api.
