--- a/SOURCES/nagrestconf-1/README
+++ b/SOURCES/nagrestconf-1/README
@@ -512,7 +512,7 @@ define service {
 [[X20]]
 Status
 ------
-Currently implemented directives (64/187) = 34%.
+Currently implemented directives (98/187) = 52%.
 
 .Currently implemented directives
 [cols="<,^,^,>",frame="topbot",options="header,autowidth"]
@@ -520,7 +520,7 @@ Currently implemented directives (64/187) = 34%.
 | Definition | No. in Nagios | No. in Nagrestconf | %
 | Contacts | 17 | 17 | 100%
 | Contact Groups | 3 | 3 | 100%
-| Hosts | 43 | 17 | 40% 
+| Hosts | 43 | 43 | 100% 
 | Host Groups | 7 | 2 | 28%
 | Services | 39 | 17 | 44%
 | Service Groups | 7 | 2 | 28%
@@ -677,6 +677,41 @@ Key for Flags column:
 | 8. | Active checks |  | activechecks
 | 9. | Service Set |  | servicesets
 | 10. | Disable |  | disable
+| 11. | Display name |  | displayname
+| 12. | Parents | LX | parents
+| 13. | Check command | X | command
+| 14. | Initial state | X | initialstate
+| 15. | Max check attempts | X | maxcheckattempts
+| 16. | Check interval | X | checkinterval
+| 17. | Retry interval | X | retryinterval
+| 18. | Passive checks enabled | X | passivechecks
+| 19. | Check period | X | checkperiod
+| 20. | Obsess over host | X | obsessoverhost
+| 21. | Check freshness | X | checkfreshness
+| 22. | Freshness threshold | X | freshnessthresh
+| 23. | Event handler | X | eventhandler
+| 24. | Event handler enabled | X | eventhandlerenabled
+| 25. | Low flap threshold | X | lowflapthresh
+| 26. | High flap threshold | X | highflapthresh
+| 27. | Flap detection enabled | X | flapdetectionenabled
+| 28. | Flap detection options | X | flapdetectionoptions
+| 29. | Process perf data | X | processperfdata
+| 30. | Retain status information | X | retainstatusinfo
+| 31. | Retain nonstatus information | X | retainnonstatusinfo
+| 32. | Notification interval | X | notifinterval
+| 33. | First notification delay | X | firstnotifdelay
+| 34. | Notification period | X | notifperiod
+| 35. | Notification opts | X | notifopts
+| 36. | Notifications_enabled | X | notifications_enabled
+| 37. | Stalking options | X | stalkingoptions
+| 38. | Notes | X | notes
+| 39. | Notes url | X | notes_url
+| 40. | Icon image | X | icon_image
+| 41. | Icon image alt | X | icon_image_alt
+| 42. | Vrml image | X | vrml_image
+| 43. | Statusmap image | X | statusmap_image
+| 44. | 2d coords | X | coords2d
+| 45. | 3d coords | X | coords3d
 |========================================================
 
 .Hosttemplates File 
