--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,5 +1,11 @@
 nagrestconf (1.0.3) UNRELEASED; urgency=low
 
+  * Added more nagios directives to the REST api. Hosts now at 100%.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 01 Nov 2012 15:31:32 +0100
+
+nagrestconf (1.0.3) UNRELEASED; urgency=low
+
   * Fixes (to Contacts) from upstream.
 
  -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 22 Oct 2012 19:31:32 +0100
@@ -12,7 +18,7 @@ nagrestconf (1.0.2) UNRELEASED; urgency=low
 
 nagrestconf (1.0.1) UNRELEASED; urgency=low
 
-  * Added more nagios directives to the REST api.
+  * Added more nagios directives to the REST api. Contacts now at 100%.
 
  -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 04 Sep 2012 16:51:32 +0100
 
