--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.0.6) UNRELEASED; urgency=low
+
+  * Added more nagios directives to the REST api. Hostgroups now complete.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 05 Nov 2012 12:21:22 +0000
+
 nagrestconf (1.0.5) UNRELEASED; urgency=low
 
   * Added more nagios directives to the REST api. Services now complete.
