--- a/SOURCES/nagrestconf-1/README
+++ b/SOURCES/nagrestconf-1/README
@@ -499,7 +499,7 @@ define service {
 [[X20]]
 Status
 ------
-Currently implemented directives (117/177) = 66%.
+Currently implemented directives (122/177) = 69%.
 
 .Currently implemented directives
 [cols="<,^,^,>",frame="topbot",options="header,autowidth"]
@@ -510,7 +510,7 @@ Currently implemented directives (117/177) = 66%.
 | Hosts | 43 | 43 | 100% 
 | Host Groups | 7 | 7 | 100%
 | Services | 39 | 39 | 100%
-| Service Groups | 7 | 2 | 28%
+| Service Groups | 7 | 5 | 28%
 | Service Sets | N/A | 10 | N/A
 | Time Periods | 5 | 4 | 80%
 | Commands | 2 | 2 | 100%
@@ -801,7 +801,7 @@ Key for Flags column:
 | 46. | 3d coords | X | coords3d
 |========================================================
 
-* Freshness thresh (auto) also sets check_command to no-checks-received,
+\* Freshness thresh (auto) also sets check_command to no-checks-received,
 active_checks_enabled to 0 (depending on whether the host is a dcc or not),
 passive_checks_enabled to 1 and check_freshness to 1. Use manfreshnessthresh
 to restrict to only setting the freshness_threshold.
@@ -859,7 +859,7 @@ to restrict to only setting the freshness_threshold.
 | 46. | 3d coords | X | coords3d
 |========================================================
 
-* Freshness thresh (auto) also sets check_command to no-checks-received,
+\* Freshness thresh (auto) also sets check_command to no-checks-received,
 active_checks_enabled to 0 (depending on whether the host is a dcc or not),
 passive_checks_enabled to 1 and check_freshness to 1. Use manfreshnessthresh
 to restrict to only setting the freshness_threshold.
@@ -917,6 +917,11 @@ to restrict to only setting the freshness_threshold.
 | 1. | Hostgroup name | RK | name
 | 2. | Alias | R | alias
 | 3. | Disable | U | disable
+| 4. | Members | LX | members
+| 5. | Servicegroup members | LX | servicegroupmembers
+| 6. | Notes | X | notes
+| 7. | Notes url | X | notes_url
+| 8. | Action url | X | action_url
 |========================================================
 
 .Timeperiods File
